syntax = "proto3";

package ai.floedb.metacat.common;

option java_multiple_files = true;
option java_package = "ai.floedb.metacat.common.rpc";
option java_outer_classname = "CommonProto";

// ----- Resource identity -----

enum ResourceKind {
  RK_UNSPECIFIED = 0;
  RK_TENANT = 1;
  RK_CATALOG = 2;
  RK_NAMESPACE = 3;
  RK_TABLE = 4;
  RK_OVERLAY = 5;
  RK_STATS = 6;
}

message ResourceId {
  string tenant_id = 1;
  string id = 2;
  ResourceKind kind = 3;
}

message NameRef {
  string catalog = 1;
  repeated string namespace_path = 2;
  string name = 3;
}

enum SpecialSnapshot {
  SS_UNSPECIFIED = 0;
  SS_CURRENT = 1;
}

message SnapshotRef {
  oneof which {
    int64 snapshot_id = 1;
    int64 as_of_ms = 2;
    SpecialSnapshot special = 3;
  }
}

// ----- Pointers & Blobs -----

message Pointer {
  string key = 1;
  string blob_uri = 2;
  int64 version = 3;
  int64 expires_at_ms = 4;
}

message BlobHeader {
  ai.floedb.metacat.common.ResourceId resource_id = 1;
  string schema_version = 2;
  string etag = 3;
  int64 created_at_ms = 4;
  repeated Tag tags = 5;
}

message Tag {
  string key = 1;
  string value = 2;
}

// ----- Auth: Principal context carried on internal gRPC -----

message PrincipalContext {
  string tenant_id = 1;
  string subject = 2;
  string client_id = 3;
  repeated string groups = 4;
  repeated string roles = 5;
  repeated string permissions = 6;
  repeated string scopes = 7;
  string plan_id = 8;
  string correlation_id = 9;
  int64  issued_at_ms = 10;
  int64  expires_at_ms = 11;
  bytes signature = 12;
}

// ----- Pagination & filtering -----

message PageRequest {
  int32 page_size = 1;
  string page_token = 2;
  string filter = 3;
  string order_by = 4;
}

message PageResponse {
  string next_page_token = 1;
  int32 total_size = 2;
}

// ----- Common error -----

message Error {
  // Codes: PERMISSION_DENIED, NOT_FOUND, PRECONDITION_FAILED,
  // INVALID_ARGUMENT, CONFLICT, RATE_LIMITED, SNAPSHOT_EXPIRED, UNAUTHENTICATED,
  // INTERNAL, UNAVAILABLE, TIMEOUT
  string code = 1;
  string message = 2;
  map<string,string> details = 3;
  string correlation_id = 4;
}